Crash fix.

The crash is fixed by setting PinWidget as child of the related
UMLWidget, which ensures that PinWidget is deleted along with
the parent by QGraphicsScene.

Additional the PinWidget instance has to be removed from the
UMLScene widget list, which happens in PinWidget destructor.

BUG: 324058